--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb+srv://natureDefenders:bf3M5ILHZquNAy2y@cluster0.rruthb6.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://naturedefender:test12345@cluster0.rruthb6.mongodb.net/nature-defenders?retryWrites=true&w=majority
 PORT=4000
+TREBLLE_API_KEY=rbgm8978WQc8kEA90VGM6FekAsjQqvdZ
+PRODUCT_API_KEY=5MKV2q6b0e70vTib
+# test12345
