--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
     "treblle": "^1.3.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "web3": "^4.1.1"
   }
 }
